--- a/styles.css
+++ b/styles.css
@@ -1,131 +1,135 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    background-color: #faf8f5;
-    color: #302f2f;
+	width: 100%;
+	height: 100vh;
+	background-color: #faf8f5;
+	color: #302f2f;
 }
 
 main {
-    width: 100%;
-    height: 640px;
-    margin: 10px auto;
-    display: grid;
-    grid-template-columns: 100px repeat(4, 1fr);
-    grid-template-rows: 50px 100px 1fr;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
+	width: 100%;
+	height: 640px;
+	margin: 10px auto;
+	display: grid;
+	grid-template-columns: 60px repeat(4, 1fr) 60px;
+	grid-template-rows: 50px 100px 1fr;
+	grid-row-gap: 10px;
+	grid-column-gap: 10px;
 }
 
 header {
-    grid-row: 1;
-    grid-column: 1 / 7;
-    background-color: #0f0f0f;
+	grid-row: 1;
+	grid-column: 1 / 7;
+	background-color: #0f0f0f;
 }
 
 header h1 {
-    color: #faf8f5;
-    grid-row: 1;
-    grid-column: 1;
+	color: #faf8f5;
+	grid-row: 1;
+	grid-column: 1;
 }
 
 nav {
-    grid-row: 1;
-    grid-column: 6;
+	grid-row: 1;
+	grid-column: 6;
 }
 
 nav li {
-    display: inline;
+	display: inline;
 }
 
 section:first-of-type {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    grid-row: 2;
-    grid-column: 2 / 6;
-    background-color: lightslategray;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	grid-row: 2;
+	grid-column: 2 / 6;
+	background-color: lightslategray;
 }
 
 button {
-    background-color: blue;
-    color: bisque;
-    border-radius: 3px;
-    border: none;
-    padding: 3px;
-    width: 100px;
+	background-color: blue;
+	color: bisque;
+	border-radius: 3px;
+	border: none;
+	padding: 3px;
+	width: 100px;
 }
 
-section:first-of-type h1 {}
+section:first-of-type h1 {
+}
 
-section:first-of-type p {}
+section:first-of-type p {
+}
 
-section:first-of-type button {}
+section:first-of-type button {
+}
 
 section:last-of-type {
-    display: flex;
-    grid-row: 3;
-    grid-column: 2 / 6;
-    background-color: #faf8f5;
+	display: flex;
+	grid-row: 3;
+	grid-column: 2 / 6;
+	background-color: #faf8f5;
+	height: 88%;
 }
 
 section:last-of-type div {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: center;
-    border-left: 1px solid #302f2f;
+	display: flex;
+	flex-direction: column;
+	justify-items: center;
+	align-items: center;
+	border-left: 1px solid #302f2f;
 
-    /* border: 1px solid #302f2f; */
+	/* border: 1px solid #302f2f; */
 }
 
 section:last-of-type div:first-of-type {
-    grid-row: 3;
-    grid-column: 2;
+	grid-row: 3;
+	grid-column: 2;
 }
 
 section:last-of-type div:nth-of-type(2) {
-    grid-row: 3;
-    grid-column: 3;
+	grid-row: 3;
+	grid-column: 3;
 }
 
 section:last-of-type div:nth-of-type(3) {
-    grid-row: 3;
-    grid-column: 4;
+	grid-row: 3;
+	grid-column: 4;
 }
 
 section:last-of-type div:last-of-type {
-    grid-row: 3;
-    grid-column: 5;
-    border-right: 1px solid #302f2f;
+	grid-row: 3;
+	grid-column: 5;
+	border-right: 1px solid #302f2f;
 }
 
 section:last-of-type img {
-    width: 95%;
-    height: 30%;
+	width: 100%;
+	height: 60%;
 }
 
 section:last-of-type h3 {
-    padding: 10px 0;
-    text-align: center;
+	padding: 10px 0;
+	text-align: center;
 }
 
 section:last-of-type p {
-    padding: 10px;
-    text-align: center;
+	padding: 10px;
+	text-align: center;
 }
 
 section:last-of-type aside {
-    width: 100%;
-    text-align: center;
-    height: auto;
-    padding: 5px;
-    background-color: lightgrey;
-    border-bottom: 1px solid #302f2f;
+	width: 100%;
+	text-align: center;
+	height: auto;
+	padding: 5px;
+	background-color: lightgrey;
+	border-bottom: 1px solid #302f2f;
 }
